correction du tableau d'alignement des badge de status

--- a/public/css/states.css
+++ b/public/css/states.css
@@ -63,6 +63,9 @@
     font-weight: bold;
 }
 
+.borderless{
+    width: 100%;
+}
 .borderless tbody tr td{
     border: none;
 }
